# charm-local-llm

./: .gitignore  .kiloignore  AGENTS.md  CRUSH.md  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  deps.yml
.kilo/: kilo.jsonc
assets/kilo/: base.kiloignore  go.kiloignore  iac.kiloignore  powershell.kiloignore  python.kiloignore  rust.kiloignore  ts.kiloignore
platform/cachyos-i9-32gb-nvidia-4090/: .env.example
platform/cachyos-i9-32gb-nvidia-4090/modfiles/: devstral-small-2-gpu.modelfile  gemma4-26b-devops.modelfile  nomic-embed-text-GPU.modelfile  qwen3-8b-gpu.modelfile  qwen3-coder-30b-gpu.modelfile  qwen3.6-27b-gpu.modelfile
platform/macos-m4-24gb/modfiles/: llama3.1-8b-devops.modelfile  qwen2.5-coder-14b-devops.modelfile  qwen2.5-coder-3b-quick.modelfile  qwen2.5-coder-7b-quick.modelfile
platform/macos-m4-32gb/: .env.example
platform/macos-m4-32gb/modfiles/: nomic-embed-text-AppleSilicon.modelfile  qwen2.5-coder-7b-quick.modelfile  qwen3-coder-30b-devops.modelfile  qwen3.6-27b-devops.modelfile
platform/macos-m5-24gb/: .env.example
platform/macos-m5-24gb/modfiles/: nomic-embed-text-AppleSilicon.modelfile  qwen2.5-coder-14b-devops.modelfile  qwen2.5-coder-7b-quick.modelfile
platform/macos-m5-32gb/: .env.example
src/: cli.rs  commands.rs  config.rs  crush.rs  kilo_integration.rs  lib.rs  main.rs  modelfile.rs  ollama.rs  platform.rs
systemd/: README.md  ollama.service
systemd/platform-overrides/: cachyos-nvidia.conf
tests/: integration_test.rs
(+3 files in other folders)
