[package]
name = "charm-local-llm"
version = "0.1.0"
edition = "2021"
authors = ["Keverall"]
description = "Setup and optimize Charm for local Ollama LLMs on CachyOS RTX 4090"
repository = "https://github.com/keverall/charm-local-llm"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
which = "6.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
regex = "1.11"
dirs = "5.0"
chrono = "0.4"
anyhow = "1.0.103"
thiserror = "2.0.18"
libc = "0.2.186"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
